css/glowingbear.css
html,
body {
    height: 100%;
/* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    /* Negative indent footer by it's height */
    margin: 0 auto -25px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
    height: 25px;
}

input#sendMessage {
    border: 0;
    width: 100%;
}

table {
  width: 100%;
}
td.time {
    padding-right: 5px;
    vertical-align: top;
}

td.prefix {
    text-align: right;
    vertical-align: top;
    padding-right: 5px;
}
td.message {
    word-wrap: break-word;
    vertical-align: top;
    width: 100%;
}
hr {
  margin: 0;
  border-color: darkgreen;
}
.text {
    white-space: pre-wrap;
}
/* Lastly, apply responsive CSS fixes as necessary */
@media (max-width: 767px) {
    #footer {
        margin-left: -20px;
        margin-right: -20px;
        padding-left: 20px;
        padding-right: 20px;
    }
}

body {
    color: #ddd;
    background-color: #222;
    padding-left: 0;
    padding-right: 5px;
    padding-bottom:70px;
}

input#sendMessage {
    border: 0;
    width: 100%;
}
.panel input {
  max-width: 300px;
}
input[type=text], input[type=password] {
    color: black;
    border: 0;
    -webkit-box-shadow: 
      inset 0 0 8px  rgba(0,0,0,0.4),
            0 0 16px rgba(0,0,0,0.4); 
    -moz-box-shadow: 
      inset 0 0 8px  rgba(0,0,0,0.4),
            0 0 16px rgba(0,0,0,0.4); 
    box-shadow: 
      inset 0 0 8px  rgba(0,0,0,0.4),
            0 0 16px rgba(0,0,0,0.4); 
    background: rgba(255,255,255,0.5);
    border-radius: 0;
}
#topbar {
    position: fixed;
    width: 100%;
    height: 25px;
    max-height: 25px;
    z-index: 1;
    line-height: 25px;
    white-space: nowrap;
}
    #topbar > * {
        float: left;
    }
    #topbar .brand {
        height: 25px;
        padding-left: 5px;
    }
        #topbar .brand img {
            height: 25px;
        }
    #topbar .title {
        padding-left: 10%;
        overflow: hidden;
    }
    #topbar .actions {
        float: right;
    }
    #topbar .dropdown-menu form {
        padding-left: 6px;
        padding-right: 6px;
    }

#topbar, #sidebar, .panel, .dropdown-menu {
    background: #282828;
}
#sidebar {
    position: fixed;
    width: 12%;
    min-height: 100%;
    height: 100%;
    min-width: 130px;
    overflow: auto;
    padding-top: 35px; /* topbar */
    font-size: smaller;
  }
    #sidebar form {
    }

    #sidebar .badge {
        border-radius: 0;
        margin-right: -15px;
    }
.nav-pills > li > a {
    border-radius: 0;
    color: #ddd;
}
.nav-pills > li > a:hover {
    color: #222;
}
.content {
    height: 100%; 
    min-height: 100%; 
}

.bufferlines {
    font-family: monospace;
    overflow-y: auto;
    margin-left: 14%;
    width: auto;
    position: relative;
    padding-bottom: 55px; /* bottom input */
    padding-top: 35px; /* topbar */
}
.bufferlines .btn {
    font-family: sans-serif;
}

.navbar-fixed-bottom {
    margin: 0 5px 0 14%;
}
@media (max-width: 968px) {
    #sidebar, .bufferlines {
        position: relative;
        min-height: 0;
        margin-left: 0;
        height: auto;
        max-width: 100%;
        border: 0;
    }
    #sidebar {
        width: 100%;
        text-align: center;
    }
    .navbar-fixed-bottom {
        margin: 0 5px 0 5px;
    }
}
.color-light-green {
    color: chartreuse;
}

.color-27 {
    color: deepskyblue;
}

.danger {
    background-color: rgb(217, 83, 79);
}

.color-28 {
    color: greenyellow;
}

.color-00 {
    color: coral;
}

.color-yellow {
    color: yellow;
}

.color-dark-red {
    color: darkred;
}

.color-dark-green {
    color: green;
}

.color-dark-blue {
    color: darkblue;
}

.color-dark-gray {
    color: gray;
}

.color-gray {
    color: lightgray;u
}

.color-brown {
    color: brown;
}

.color-cyan {
    color: cyan;
}

.color-dark-cyan {
    color: darkcyan;
}

li.notification {
    color: green;
}

[ng-click],
[data-ng-click],
[x-ng-click] {
    cursor: pointer;
}
::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}
::-webkit-scrollbar-track-piece  {
    background-color: black;
}
::-webkit-scrollbar-thumb:vertical {
    height: 15px;
    background: rgba(255,255,255,0.5);
}

